--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -1,5 +1,11 @@
 {
-  "extends": "tsconfig/react-library.json",
-  "include": ["."],
+  "compilerOptions": {
+    "lib": ["dom", "ES2015"],
+    "strict": true,
+    "forceConsistentCasingInFileNames": true,
+    "importHelpers": true,
+    "jsx": "react-jsx"
+  },
+  "include": ["src"],
   "exclude": ["dist", "build", "node_modules"]
 }
